Bug 1111518 - Fix the logic in MediaDecoder::CanPlayThrough(). r=jwwang